--- a/SpringApp/pom.xml
+++ b/SpringApp/pom.xml
@@ -51,6 +51,26 @@
     	<artifactId>hibernate-validator</artifactId>
     	<version>5.2.4.Final</version>
     </dependency>
+<!--     <dependency> -->
+<!--     	<groupId>org.hibernate.javax.persistence</groupId> -->
+<!--     	<artifactId>hibernate-jpa-2.0-api</artifactId> -->
+<!--     	<version>1.0.1.Final</version> -->
+<!--     </dependency> -->
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-entitymanager</artifactId>
+    	<version>5.1.0.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-orm</artifactId>
+    	<version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.38</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringApp</finalName>
